# pylock-lint

./: .gitignore  .pre-commit-hooks.yaml  ASK-devto-pylock.md  DRAFT-devto-pylock-audit.md  README.md  STAGED-PR-awesome-python-packaging.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/pylock_lint/: __init__.py  checks.py  cli.py  model.py
tests/: test_checks.py
tests/fixtures/: broken.pylock.toml  clean.pylock.toml
